<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="naviation_view">

    <item android:id="@+id/nav_home"
          android:title="@string/menu_home"
          android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/nav_account"
        android:title="@string/drawer_minha_conta"
        android:icon="@drawable/ic_menu_user_black"/>

    <item android:id="@+id/nav_category"
        android:title="@string/drawer_categoria"
        android:icon="@drawable/ic_menu_category_black"/>

    <item android:id="@+id/nav_order"
        android:title="@string/drawer_minhas_compras"
        android:icon="@drawable/ic_menu_order_black"/>

    <item android:id="@+id/nav_cart"
        android:title="@string/drawer_meu_carrinho"
        android:icon="@drawable/ic_menu_cart_black"/>

    <item android:id="@+id/nav_logout"
        android:title="@string/drawer_sair"
        android:icon="@drawable/ic_menu_logout"/>

</menu>